# EchoForge

./: .env.exemple  Dockerfile  LICENSE  README.md  chat_prototype.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
data/characters/azzedine/: memories.json  relationships.json  secrets.json
data/characters/claude/: memories.json  relationships.json  secrets.json
data/characters/fathira/: memories.json  relationships.json  secrets.json
data/characters/martine/: memories.json  relationships.json  secrets.json
data/characters/roberte/: memories.json  relationships.json  secrets.json
data/game_data/: characters.json  player.json
data/game_data/sessions/: player_session_20250715_143943_2fbf8fc4.json  player_session_20250715_144845_b652d382.json  player_session_20250715_152649_218c0903.json
data/world_lore/: world.json
echoforge/agents/checkpointers/: postgres_checkpointer.py
echoforge/agents/conditions/: complexity_router.py
echoforge/agents/graphs/: character_graph.py
echoforge/core/: __init__.py  action_parser.py  embeddings.py  llm_providers.py  rag_engine.py  vector_stores.py
echoforge/db/: database.py  init_db.py
echoforge/notebooks/: visu_graph.ipynb
echoforge/utils/: config.py
vector_stores/character_azzedine/: index.faiss  index.pkl
vector_stores/character_claude/: index.faiss  index.pkl
vector_stores/character_fathira/: index.faiss  index.pkl
vector_stores/character_martine/: index.faiss  index.pkl
vector_stores/character_roberte/: index.faiss  index.pkl
vector_stores/world_lore/: index.faiss  index.pkl
(+30 files in other folders)
