[project]
name = "echoforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "gradio>=5.35.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
